# Spline-Model-Mapper

./: CMakeLists.txt  README.md
contrib/windows-cl-x86_64/include/sys/: linkedlist.h  list.h  lock.h  object.h  ptr.h  string.h  vector.h  weakptr.h
data/models/HalfLife/de_dust2/: de_dust2.mtl
data/models/Shapes/: shape.mtl.mtl
data/models/map/: map.mtl
data/models/track/: Rail.mtl  Rail90.mtl  coasterTrackShort.mtl
data/splines/: testspline.txt  testspline1.txt  testspline2.txt  testspline3.txt  testspline4.txt  testspline5.txt
src/RedEngine/: AudioClip.cpp  AudioClip.h  AudioSource.cpp  AudioSource.h  BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  Collider.cpp  Collider.h  Component.cpp  Component.h  Core.cpp  Core.h  Entity.cpp  Entity.h  GUI.cpp  GUI.h  Input.cpp  Input.h  MeshCollider.cpp  MeshCollider.h  Model.cpp  Model.h  ModelRenderer.cpp  ModelRenderer.h  RedEngine.h  Resource.h  Resources.h  RigidBody.cpp  RigidBody.h  Shader.h  Spline.cpp  Spline.h  SplineRenderer.cpp  SplineRenderer.h  Texture.h  Transform.cpp  Transform.h  TriangleRenderer.cpp  (+4 more)
src/demo/: CarPhysics.cpp  CarPhysics.h  FollowCam.cpp  FollowCam.h  Menu.cpp  Menu.h  Track.cpp  Track.h  main.cpp
src/rend/: Exception.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelShader.cpp  ModelShader.h  Shader.cpp  Shader.h  rendmath.h
